<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/title_notifications">

        <SwitchPreferenceCompat
            android:key="preference_gr"
            android:title="@string/title_settings_gr">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            android:key="preference_ht"
            android:title="@string/title_settings_ht">

        </SwitchPreferenceCompat>

        <SwitchPreferenceCompat
            android:key="preference_lh"
            android:title="@string/title_settings_lh">

        </SwitchPreferenceCompat>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_drinks">

        <SeekBarPreference
            android:summary="@string/title_settings_water"
            app:defaultValue="2000"
            app:key="smartfasting.day_water_volume"
            app:title="@string/title_drink_water"
            app:msbp_minValue="0"
            app:msbp_maxValue="5000"
            app:msbp_interval="50"
            app:msbp_measurementUnit="ml"
            app:msbp_dialogEnabled="true" />

    </PreferenceCategory>

</PreferenceScreen>