<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tracker">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_tracker"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.TrackerFragment"
        android:label="@string/title_tracker"
        tools:layout="@layout/fragment_fast_tracker">

        <action
            android:id="@+id/open_fasts_fragment"
            app:destination="@id/navigation_fasts" />
    </fragment>

    <fragment
        android:id="@+id/navigation_drink_tracker"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.DrinkTrackerFragment"
        android:label="@string/title_drink_tracker"
        tools:layout="@layout/fragment_drink_tracker" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_fasts"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.FastsFragment"
        android:label="@string/title_fasts"
        tools:layout="@layout/fragment_fasts" />

    <dialog
        android:id="@+id/chooseDialogFragment"
        android:name="com.itis.group11801.fedotova.smartfasting.view.fragment.ChooseDialogFragment"
        android:label="@string/title_choose_a_drink"
        tools:layout="@layout/dialog_fragment_choose_drink" />

</navigation>