<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="296dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/title_choose_a_drink"
        android:textColor="@color/colorTextDark"
        android:textSize="20sp"></TextView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:theme="@style/SpinnerItemStyle"
        android:entries="@array/drinks"></Spinner>

    <androidx.appcompat.widget.AppCompatSeekBar
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:theme="@style/SeekBarStyle"
        android:layout_marginTop="40dp"></androidx.appcompat.widget.AppCompatSeekBar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:hint="200ml"></TextView>

    <Button
        android:layout_width="180dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/title_btn_save"
        android:textColor="@android:color/white"
        android:textSize="14sp"></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/abeezee_regular"
        android:text="@string/title_btn_cancel"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"></TextView>

</LinearLayout>